# splat-logger

./: .gitignore  404.html  README.md  index.html  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: python.yml
basic-usage/: index.html
dev/: blocker.ipynb  making-docs.ipynb  scratch.ipynb
dev/ref/: downmark.py  package.py
doc/: basic-usage.md
doc/features/: named-handlers-feature.md  named-handlers.md  verbosity-feature.md
doc/notes/: 2022-09-21.setup.ipynb
docs/: build.novella  mkdocs.yml
docs/_site/: index.html  sitemap.xml
docs/basic-usage/: index.html
docs/content/: index.md
docs/content/features/: named-handlers.md  verbosity.md
docs/search/: search_index.json
doctor_testerson/: __init__.py
features/named-handlers/: index.html
features/verbosity/: index.html
splatlog/: __init__.py  _docs.py  _testing.py  console_handler.py  file_handler.py  handler_descriptor.py  index.html  levels.py  lib.py  locking.py  log_getter.py  named_handlers.py  rich_handler.py  roles.py  splat_adapter.py  splat_handler.py  splat_logger.py  splat_manager.py  typings.py  verbosity.py
splatlog/_docs/: __init__.py  api_page.py  backtick_preprocessor.py  backtick_src_processor.py  docstring_backtick_processor.py  index.html  nav.py  stdlib.py  stdlib_processor.py  stdlib_resolver.py
splatlog/_testing/: index.html
splatlog/handler/: __init__.py  priority_handler.py
splatlog/json/: default_handlers.py  index.html  json_encoder.py  json_formatter.py
splatlog/levels/: index.html
splatlog/lib/: __init__.py  collections.py  index.html  rich.py  text.py  typeguard.py  validate.py
splatlog/locking/: index.html
splatlog/named_handlers/: index.html
splatlog/names/: index.html
splatlog/rich_handler/: index.html
splatlog/setup/: index.html
splatlog/splat_handler/: index.html
splatlog/splat_logger/: index.html
splatlog/typings/: index.html
splatlog/verbosity/: __init__.py  index.html  verbosity_level_resolver.py  verbosity_levels_filter.py  verbosity_levels_handler.py  verbosity_state.py
(+81 files in other folders)
