[tool.poetry]
name = "splatlog"
version = "0.2.0"
description = "Python logger that accepts ** values and prints 'em out."
authors = [
  "nrser <neil@neilsouza.com>"
]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
]
include = [
  "LICENSE"
]
packages = [
  {include = "splatlog"},
  {include = "doctor_testerson"},
]

[tool.poetry.urls]
Homepage = "https://github.com/nrser/splatlog"

[tool.poetry.scripts]
"dr.t" = "doctor_testerson:main"

[tool.poetry.dependencies]
python = "^3.8"
rich = ">=9"
typeguard = "^2.13.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
Pint = "^0.19.2"

# Documentation generation stuff

mkdocs = "^1.3.0"

[tool.poetry.dev-dependencies.docspec]
git = "https://github.com/nrser/docspec.git"
branch = "nrser"
subdirectory = "docspec"

[tool.poetry.dev-dependencies.docspec-python]
git = "https://github.com/nrser/docspec.git"
branch = "nrser"
subdirectory = "docspec-python"

[tool.poetry.dev-dependencies.pydoc-markdown]
git = "https://github.com/nrser/pydoc-markdown.git"
branch = "nrser"

# BEGIN Pydoc-Markdown
# ============================================================================
# 
# Adapted from https://github.com/NiklasRosenstein/pydoc-markdown/blob/b15127e3c643976e71a10c7fa4d03297ee616542/examples/mkdocs/pyproject.toml
# 

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = [ "." ]

[tool.pydoc-markdown.renderer]
type = "hugo"

[tool.pydoc-markdown.renderer.config]
title = "Splatlog"
theme = {clone_url = "https://github.com/alex-shpak/hugo-book.git"}
serverURL = "0.0.0.0"
serverPort = 8000

[[tool.pydoc-markdown.renderer.pages]]
title = "API Documentation"
name = "index"
contents = [ "splatlog.*" ]

# END Pydoc-Markdown *********************************************************

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
